# machlib

./: .gitignore  AXIOM_AUDIT.md  AXIOM_AUDIT_V2.md  AXIOM_SIDE_CONDITIONS.md  CHANGELOG.md  CONTRIBUTING.md  DERIVATIVE_RANK_LT_REFACTOR_PLAN.md  EMLPFAFFIAN_VALIDON_DECISION_2026_06_12.md  EML_WITNESS_FINDING_DECISION_2026_07_15.md  EML_WITNESS_FINDING_RESEARCH_NOTE.md  EML_WITNESS_FINDING_THEOREM_MAP.md  LICENSE  PHILOSOPHY.md  README.md  SCHEMA.md  status.json  vercel.json
.github/: build-time.json
capcard_marketplace_drafts/: eml_puzzle_evidence_kernel_card_DRAFT_2026_05_21.json  eml_puzzle_evidence_kernel_guardrails_DRAFT_2026_05_21.json  eml_puzzle_evidence_kernel_listing_DRAFT_2026_05_21.md  eml_puzzle_evidence_kernel_reviewer_checklist_DRAFT_2026_05_21.md  eml_puzzle_evidence_kernel_strengthened_DRAFT_2026_05_21.json  eml_puzzle_evidence_kernel_traceability_DRAFT_2026_05_21.json  machlib_trust_adapter_candidate_DRAFT_2026_05_25.json  machlib_trust_adapter_candidate_DRAFT_2026_05_25.md  marketplace_mock_index_2026_05_21.json  marketplace_mock_index_2026_05_21.md  mobius_pair_kernel_card_DRAFT_2026_05_21.json  mobius_pair_kernel_guardrails_DRAFT_2026_05_21.json  mobius_pair_kernel_listing_DRAFT_2026_05_21.md  trainer_board_v0_evidence_candidate_DRAFT_2026_05_23.json  trainer_board_v0_evidence_candidate_DRAFT_2026_05_23.md
capcard_specs/: capcard_claim_policy_v0_1_2026_05_21.json  capcard_lifecycle_spec_v0_1_2026_05_21.json  capcard_schema_v0_1_2026_05_21.json  capcard_spec_v0_1_2026_05_21.json
command_center_feeds/: README.md  capcard_deep_utility_assessment_card_2026_05_21.json  capcard_deep_utility_assessment_feed_2026_05_21.json  capcard_greatness_assessment_card_2026_05_21.json  capcard_greatness_assessment_feed_2026_05_21.json  capcard_lab_status_card_2026_05_21.json  capcard_lab_status_feed_2026_05_21.json  capcard_marketplace_candidate_status_card_2026_05_21.json  capcard_marketplace_candidate_status_feed_2026_05_21.json  consolidated_public_private_checkpoint_card_2026_05_23.json  consolidated_public_private_checkpoint_feed_2026_05_23.json  feasibility_algebra_status_card_2026_05_23.json  feasibility_algebra_status_feed_2026_05_23.json  (+45 more)
gym/: env.py  (+7 more)
package_candidates/claim_boundary/: README.md  pyproject.toml
package_candidates/claim_boundary/reports/: claim_boundary_cli_contract_2026_05_20.md  claim_boundary_draft_package_review_2026_05_20.md  claim_boundary_no_publish_guardrail_2026_05_20.md
package_candidates/claim_boundary/src/claim_boundary/: __init__.py  cli.py  patterns.py  scanner.py
package_candidates/claim_boundary/tests/: test_scanner.py
package_candidates/eml_harness/: README.md  pyproject.toml
package_candidates/eml_harness/reports/: eml_harness_publish_readiness_2026_05_20.md
package_candidates/eml_harness/src/eml_harness/: __init__.py  cli.py  runner.py  schema.py
package_candidates/eml_harness/tests/: test_runner.py  test_schema.py
package_candidates/eml_records/: README.md  pyproject.toml
package_candidates/eml_records/reports/: eml_records_cli_contract_2026_05_20.md  eml_records_draft_package_review_2026_05_20.md  eml_records_hardening_report_2026_05_20.md  eml_records_no_publish_boundary_2026_05_20.md  eml_records_no_publish_guardrail_2026_05_20.md  eml_records_schema_contract_2026_05_20.md
package_candidates/eml_records/src/eml_records/: __init__.py  cli.py  loaders.py  schema.py  validators.py
package_candidates/eml_records/tests/: test_cli.py  test_validators.py
package_candidates/hybrid_trace_eml/: README.md  pyproject.toml
package_candidates/hybrid_trace_eml/reports/: hybrid_trace_eml_publish_readiness_2026_05_20.md
package_candidates/hybrid_trace_eml/src/hybrid_trace_eml/: __init__.py  cli.py  trace.py
package_candidates/hybrid_trace_eml/tests/: test_trace.py
package_candidates/machlib/: README.md  pyproject.toml
package_candidates/machlib/reports/: machlib_api_review_2026_05_20.md  machlib_no_publish_guardrail_2026_05_20.md  machlib_package_boundary_review_2026_05_20.md  machlib_public_copy_review_2026_05_20.md
package_candidates/machlib/src/machlib/: __init__.py  boundaries.py  cli.py  summary.py
package_candidates/machlib/tests/: test_cli.py  test_summary.py
package_candidates/machlib_workbench/: README.md  pyproject.toml
package_candidates/machlib_workbench/reports/: machlib_workbench_publish_readiness_2026_05_20.md
package_candidates/machlib_workbench/src/machlib_workbench/: __init__.py  cli.py  summary.py
package_candidates/machlib_workbench/tests/: test_cli.py  test_summary.py
package_candidates/review_branch_packet/: README.md  pyproject.toml
package_candidates/review_branch_packet/reports/: review_branch_packet_cli_contract_2026_05_20.md  review_branch_packet_draft_package_review_2026_05_20.md  review_branch_packet_hardening_report_2026_05_20.md  review_branch_packet_no_publish_boundary_2026_05_20.md  review_branch_packet_no_publish_guardrail_2026_05_20.md  review_branch_packet_read_only_contract_2026_05_20.md
package_candidates/review_branch_packet/src/review_branch_packet/: __init__.py  cli.py  git_inspect.py  packet.py  render.py  schema.py
package_candidates/review_branch_packet/tests/: test_cli.py  test_git_inspect.py  test_packet.py
package_candidates/zero_mathlib_checker/: README.md  pyproject.toml
package_candidates/zero_mathlib_checker/reports/: zero_mathlib_checker_cli_contract_2026_05_20.md  zero_mathlib_checker_draft_package_review_2026_05_20.md  zero_mathlib_checker_hardening_report_2026_05_20.md  zero_mathlib_checker_no_publish_boundary_2026_05_20.md  zero_mathlib_checker_no_publish_guardrail_2026_05_20.md
package_candidates/zero_mathlib_checker/src/zero_mathlib_checker/: __init__.py  cli.py  scanner.py
package_candidates/zero_mathlib_checker/tests/: test_scanner.py
(+7460 files in other folders)
