[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-boundary"
version = "0.0.0.dev0"
description = "Local draft scanner for claim and no-go boundary language."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
claim-boundary = "claim_boundary.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
