[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eml-harness"
version = "0.0.0.dev0"
description = "Local draft bounded EML harness result helpers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
eml-harness = "eml_harness.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
