[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "machlib-workbench"
version = "0.0.0.dev0"
description = "Local draft MachLib evidence workbench summary helper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
machlib-workbench = "machlib_workbench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
