[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zero-mathlib-checker"
version = "0.0.1"
description = "Pre-alpha scanner for direct Mathlib dependency evidence."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
zero-mathlib-checker = "zero_mathlib_checker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
